src/test/ui/rfc-2091-track-caller/error-with-trait-fn-impl.stderr
warning: the feature `track_caller` is incomplete and may cause the compiler to crash
  --> $DIR/error-with-trait-fn-impl.rs:1:12
   |
LL | #![feature(track_caller)]
   |            ^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0738]: `#[track_caller]` is not supported in traits yet.
  --> $DIR/error-with-trait-fn-impl.rs:8:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0738`.
